--- a/backend/backend/templates/home.html
+++ b/backend/backend/templates/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Django & Django Rest Framework & Celery</title>
 </head>
 <body>
-<h1>Probando</h1>
+<h1 style="text-align: center">Welcome to django , django rest framework and celery boilerplate.</h1>
 
 </body>
 </html>
