Generalized table components and fix ordering

--- a/frontend-admin/src/global.less
+++ b/frontend-admin/src/global.less
@@ -5,6 +5,10 @@
   padding: 10px 0px;
 }
 
+.table-column-actions > :not(:first-child) {
+  margin-left: 10px;
+}
+
 .drawer-footer {
   position: absolute;
   left: 0;
