--- a/frontend-admin/src/global.less
+++ b/frontend-admin/src/global.less
@@ -9,6 +9,23 @@
   margin-left: 10px;
 }
 
+.container-general-actions-right {
+  padding: 5px 0px;
+}
+
+.container-general-actions-right > * {
+  float: right;
+}
+
+.container-general-actions-right > :not(:last-child) {
+  margin-right: 10px;
+}
+
+.container-applied-filters {
+  min-height: 40px;
+  padding: 5px;
+}
+
 .drawer-footer {
   position: absolute;
   left: 0;
