Minor changes on css configs

--- a/frontend-admin/src/global.less
+++ b/frontend-admin/src/global.less
@@ -36,3 +36,12 @@
   background: #fff; // TODO : Parametrizer color
   text-align: right;
 }
+
+.generic-crud-section {
+  .page-header {
+    .btn-actions {
+      float: right;
+      margin-left: 5px;
+    }
+  }
+}
