--- a/frontend-admin/src/global.less
+++ b/frontend-admin/src/global.less
@@ -48,14 +48,6 @@
     color: rgba(0, 0, 0, 0.25);
   }
 
-  .btn-forms-action:not(:last-child) {
-    margin-right: 8px;
-  }
-
-  .ant-drawer-horizontal .ant-drawer-content-wrapper {
-    width: 700px !important;
-  }
-
   .form-filters {
     min-height: 50px;
     margin-top: 15px;
@@ -64,6 +56,14 @@
       float: right;
     }
   }
+}
+
+.btn-forms-action:not(:last-child) {
+  margin-right: 8px !important;
+}
+
+.ant-drawer-horizontal .ant-drawer-content-wrapper {
+  width: 700px !important;
 }
 
 .ant-calendar-picker {
