Cosmetic change - logo

--- a/frontend-admin/src/global.less
+++ b/frontend-admin/src/global.less
@@ -1,8 +1,8 @@
 #logo {
   text-align: center;
-  height: 70px;
-  fill: #f1f1b0;
-  padding: 10px 0px;
+  padding: 20px 0px;
+  font-size: 1.4em;
+  color: #08c;
 }
 
 .table-column-actions > :not(:first-child) {
