update readme, improvement command to generate random users, remove unnecessary definition on docker compose file and cosmetic change on home page

--- a/config/templates/home.html
+++ b/config/templates/home.html
@@ -47,7 +47,7 @@
         <nav id="navbar">
             <header>Documentation Menu</header>
             <a href="#Intro" class="nav-link">Introduction</a>
-            <a href="#Object" class="nav-link">API Rest</a>
+            <a href="#Object" class="nav-link">Django backend & API Rest</a>
             <a href="#Inheritance" class="nav-link">Administrator & frontend</a>
             <a href="#Polymorphism" class="nav-link">Deploy on server</a>
             <a href="#Encapsulation" class="nav-link">Next steps</a>
